--- a/pjsip-apps/src/swig/java/android/app-kotlin/build.gradle
+++ b/pjsip-apps/src/swig/java/android/app-kotlin/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation project(path: ':pjsua2')
+    implementation project(path: ':app')
 }
